# JigChecker

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  standalone.yml
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: greeter.cpp  jig_checker.cpp  main.cpp
documentation/: CMakeLists.txt
include/checker/: jig_checker.hpp
source/: jig_checker.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  jig_checker_test.cpp
